Fix: 라우팅 경로 수정 및 body태그 overflow:hidden 설정

--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 ul {
